# solara-paper-finder

./: README.md  app.py  pyproject.toml  run.sh  search_engine.py
components/: footer.py  header.py  paper_chat_modal.py  search_bar.py  search_card.py
tests/: test_paper_model.py  test_search_engine.py
